--- a/polygerrit-ui/app/elements/change/gr-change-actions/gr-change-actions.html
+++ b/polygerrit-ui/app/elements/change/gr-change-actions/gr-change-actions.html
@@ -19,6 +19,7 @@ limitations under the License.
 <link rel="import" href="../../../behaviors/rest-client-behavior.html">
 
 <link rel="import" href="../../shared/gr-button/gr-button.html">
+<link rel="import" href="../../shared/gr-dropdown/gr-dropdown.html">
 <link rel="import" href="../../shared/gr-js-api-interface/gr-js-api-interface.html">
 <link rel="import" href="../../shared/gr-overlay/gr-overlay.html">
 <link rel="import" href="../../shared/gr-rest-api-interface/gr-rest-api-interface.html">
@@ -38,7 +39,8 @@ limitations under the License.
       section {
         display: inline-block;
       }
-      gr-button {
+      gr-button,
+      gr-dropdown {
         margin-left: .5em;
       }
       gr-button:before {
@@ -63,10 +65,20 @@ limitations under the License.
       }
     </style>
     <div>
-      <section hidden$="[[_shouldHideActions(_allActionValues.*, _loading)]]">
+    <gr-dropdown
+        id="moreActions"
+        down-arrow
+        vertical-offset="32"
+        horizontal-align="right"
+        on-tap-item-abandon="_handleAbandonTap"
+        on-tap-item-cherrypick="_handleCherrypickTap"
+        on-tap-item-delete="_handleDeleteTap"
+        hidden$="[[_shouldHideActions(_menuActions.*, _loading)]]"
+        items="[[_menuActions]]">More</gr-dropdown>
+      <section hidden$="[[_shouldHideActions(_topLevelActions.*, _loading)]]">
         <template
             is="dom-repeat"
-            items="[[_allActionValues]]"
+            items="[[_topLevelActions]]"
             as="action">
           <gr-button title$="[[action.title]]"
               hidden$="[[_computeActionHidden(action.__key, _hiddenActions.*)]]"
