--- a/polygerrit-ui/app/elements/change-list/gr-change-list-item/gr-change-list-item.html
+++ b/polygerrit-ui/app/elements/change-list/gr-change-list-item/gr-change-list-item.html
@@ -26,7 +26,7 @@ limitations under the License.
   <template>
     <style>
       :host {
-        display: flex;
+        display: table-row;
         border-bottom: 1px solid #eee;
       }
       :host([selected]) {
@@ -42,7 +42,6 @@ limitations under the License.
         background-color: #fcfaa6;
       }
       .cell {
-        flex-shrink: 0;
         padding: .3em .5em;
       }
       a {
@@ -70,6 +69,11 @@ limitations under the License.
       }
       .u-gray-background {
         background-color: #F5F5F5;
+      }
+      @media only screen and (max-width: 50em) {
+        :host {
+          display: flex;
+        }
       }
     </style>
     <style include="gr-change-list-styles"></style>
