Make gr-change-list a true HTML table
- Remove all flex attributes from from change list CSS (with the
  exception of mobile).
  - Add flex properties for change list items with media queries.
- <tr> wrapped around gr-change-list-item doesn't work in the table.
  Instead, style <gr-change-list-item> to be display: table-row.

Bug: Issue 5285
Change-Id: I576ddbda3c1697c3476620a5e8ea9db727e08557

--- a/polygerrit-ui/app/elements/change-list/gr-change-list/gr-change-list_test.html
+++ b/polygerrit-ui/app/elements/change-list/gr-change-list/gr-change-list_test.html
@@ -117,6 +117,16 @@ limitations under the License.
           'Some-Special-Label-7'), 'SSL7');
     });
 
+    test('colspans', function() {
+      var thItemCount = Polymer.dom(element.root).querySelectorAll(
+          'th').length;
+
+      var changeTableColumns = [];
+      var labelNames = [];
+      assert.equal(thItemCount, element._computeColspan(
+          changeTableColumns, labelNames));
+    });
+
     test('keyboard shortcuts', function(done) {
       element.selectedIndex = 0;
       element.changes = [
