Prevent 'merged as sadface'
Fixes an assumption that current_revision will always be populated in
the change object. Now, the 'Merged as $SHA' text will only appear if
the change status is 'Merged' AND the current_revision SHA exists.

Bug: Issue 5337
Change-Id: Iacde8b340d32d26d27a7ed9601d9fe679fba2df9

--- a/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view.html
+++ b/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view.html
@@ -255,7 +255,7 @@ limitations under the License.
           <a href$="[[_computeChangePermalink(_change._number)]]">[[_change._number]]</a><!--
        --><template is="dom-if" if="[[_changeStatus]]">
             ([[_changeStatus]]<!--
-         --><template is="dom-if" if="[[_computeShowCommitInfo(_changeStatus)]]">
+         --><template is="dom-if" if="[[_computeShowCommitInfo(_changeStatus, _change.current_revision)]]">
               as
               <gr-commit-info
                 change="[[_change]]"
