Fix 'Merged as sadface'
The commit field of CommitInfo is not always populated, but is relied
upon by <gr-commit-info> for computing the shortened weblink.

Bug: Issue 5337
Change-Id: I94cfdb32702ba6140c4db14c7ee335a7dc1b073e

--- a/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view_test.html
+++ b/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view_test.html
@@ -649,11 +649,18 @@ limitations under the License.
     });
 
     test('_computeMergedCommitInfo', function() {
-      var dummyRevObj = {
-        sha: {commit: 'test'},
+      var dummyRevs = {
+        1: { commit: { commit: 1 } },
+        2: { commit: {} },
       };
-      assert.deepEqual(element._computeMergedCommitInfo('sha', dummyRevObj),
-          'test');
+      assert.deepEqual(element._computeMergedCommitInfo(0, dummyRevs), {});
+      assert.deepEqual(element._computeMergedCommitInfo(1, dummyRevs),
+          dummyRevs[1].commit);
+
+      // Regression test for issue 5337.
+      var commit = element._computeMergedCommitInfo(2, dummyRevs);
+      assert.notDeepEqual(commit, dummyRevs[2]);
+      assert.deepEqual(commit, { commit: 2 });
     });
 
     test('get latest revision', function() {
