--- a/polygerrit-ui/app/elements/diff/gr-diff-comment-thread-group/gr-diff-comment-thread-group.html
+++ b/polygerrit-ui/app/elements/diff/gr-diff-comment-thread-group/gr-diff-comment-thread-group.html
@@ -24,6 +24,9 @@ limitations under the License.
         display: block;
         white-space: normal;
       }
+      gr-diff-comment-thread + gr-diff-comment-thread {
+        margin-top: 3px;
+      }
     </style>
     <template id="commentList" is="dom-repeat" items="[[_threadGroups]]" as="thread">
       <gr-diff-comment-thread
