Move reply buttons to comment thread
Change-Id: I003418ae6314247cbefeb5fb39b71578f38bf4b3

--- a/polygerrit-ui/app/elements/diff/gr-diff-comment-thread/gr-diff-comment-thread.html
+++ b/polygerrit-ui/app/elements/diff/gr-diff-comment-thread/gr-diff-comment-thread.html
@@ -28,6 +28,10 @@ limitations under the License.
         margin-bottom: 1px;
         white-space: normal;
       }
+      .actions {
+        border-top: 1px dotted #bbb;
+        padding: .5em .7em;
+      }
       #container {
         background-color: #fcfad6;
       }
@@ -44,12 +48,14 @@ limitations under the License.
             draft="[[comment.__draft]]"
             show-actions="[[_showActions]]"
             project-config="[[projectConfig]]"
-            on-comment-discard="_handleCommentDiscard"
-            on-create-ack-comment="_handleCommentAck"
-            on-create-done-comment="_handleCommentDone"
-            on-create-fix-comment="_handleCommentFix"
-            on-create-reply-comment="_handleCommentReply"></gr-diff-comment>
+            on-comment-discard="_handleCommentDiscard"></gr-diff-comment>
       </template>
+      <div class="actions humanActions" hidden$="[[_hideActions(_showActions, _lastComment)]]">
+        <gr-button class="action reply" on-tap="_handleCommentReply">Reply</gr-button>
+        <gr-button class="action quote" on-tap="_handleCommentReply">Quote</gr-button>
+        <gr-button class="action ack" on-tap="_handleCommentAck">Ack</gr-button>
+        <gr-button class="action done" on-tap="_handleCommentDone">Done</gr-button>
+      </div>
     </div>
     <gr-rest-api-interface id="restAPI"></gr-rest-api-interface>
     <gr-storage id="storage"></gr-storage>
