--- a/polygerrit-ui/app/elements/shared/gr-dropdown/gr-dropdown.html
+++ b/polygerrit-ui/app/elements/shared/gr-dropdown/gr-dropdown.html
@@ -27,6 +27,7 @@ limitations under the License.
       }
       .dropdown-trigger {
         text-decoration: none;
+        width: 100%;
       }
       .dropdown-content {
         background-color: #fff;
