No change-view reload when selecting the latest patch via select
When viewing a change on the non-latest patch set, there are two ways in
the UI to navigate to the latest patch:
* Tapping the [Go to latest patch set] link, and
* Selecting the final option in the "Patch set" select.

Using either navigation option, the result would be a new URL to show
the newest patch, which would be automatically coalesced to its
shortened form (namely /c/{change}/ rather than /c/{change}/{patch}).
When the change view handles this parameter change, it cannot determine
whether the requested patch range has changed, so it reloads the entire
change view.

Problematically, selecting any non-latest patch set in the "Patch set"
select will not reload the change view. Thus, selecting the last one has
a (potentially surprisingly) different behavior than its predecessors.

With this change, selecting any patch set using the "Patch set" select
will result in a non-shortened URL (i.e. that includes the patch) and
will not reload the entire view.

Tapping the [Go to latest patch set] link, on the other hand, remains
unmodified in this change, and will always reload the view. In this way
the user can still navigate to a patch set that is newer than the latest
patch set known when the "Patch set" select was rendered.

Bug: Issue 5342
Change-Id: I9aa4f34f4e2119ba9b554e621916f95b5207a7b4

--- a/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view_test.html
+++ b/polygerrit-ui/app/elements/change/gr-change-view/gr-change-view_test.html
@@ -412,8 +412,8 @@ limitations under the License.
           selectEl.value = '3';
           element.fire('change', {}, {node: selectEl});
         } else if (numEvents == 2) {
-          assert(showStub.lastCall.calledWithExactly('/c/42'),
-              'Should navigate to /c/42');
+          assert(showStub.lastCall.calledWithExactly('/c/42/3'),
+              'Should navigate to /c/42/3');
           done();
         }
       });
