--- a/polygerrit-ui/app/elements/change/gr-change-actions/gr-change-actions.html
+++ b/polygerrit-ui/app/elements/change/gr-change-actions/gr-change-actions.html
@@ -67,16 +67,16 @@ limitations under the License.
       }
     </style>
     <div>
-    <gr-dropdown
-        id="moreActions"
-        down-arrow
-        vertical-offset="32"
-        horizontal-align="left"
-        on-tap-item-abandon="_handleAbandonTap"
-        on-tap-item-cherrypick="_handleCherrypickTap"
-        on-tap-item-delete="_handleDeleteTap"
-        hidden$="[[_shouldHideActions(_menuActions.*, _loading)]]"
-        items="[[_menuActions]]">More</gr-dropdown>
+      <gr-dropdown
+          id="moreActions"
+          down-arrow
+          vertical-offset="32"
+          horizontal-align="right"
+          on-tap-item-abandon="_handleAbandonTap"
+          on-tap-item-cherrypick="_handleCherrypickTap"
+          on-tap-item-delete="_handleDeleteTap"
+          hidden$="[[_shouldHideActions(_menuActions.*, _loading)]]"
+          items="[[_menuActions]]">More</gr-dropdown>
       <section hidden$="[[_shouldHideActions(_topLevelActions.*, _loading)]]">
         <template
             is="dom-repeat"
