Don't merge threads on same line left/right
Goes along with c/95273/. If new threads were added on the left/right,
previously, they would get merged in a unified view. This change allows
threads to be separate if referencing different sides of the diff.

Bug: Issue 5114
Change-Id: I5cc4c17d4bb134e31e5cc07ff9b08ed349488c97

--- a/polygerrit-ui/app/elements/diff/gr-diff-builder/gr-diff-builder.html
+++ b/polygerrit-ui/app/elements/diff/gr-diff-builder/gr-diff-builder.html
@@ -208,9 +208,9 @@ limitations under the License.
         },
 
         createCommentThreadGroup: function(changeNum, patchNum, path, side,
-            projectConfig) {
+            commentSide, projectConfig) {
           return this._builder.createCommentThreadGroup(changeNum, patchNum,
-              path, side, projectConfig);
+              path, side, commentSide, projectConfig);
         },
 
         emitGroup: function(group, sectionEl) {
