--- a/polygerrit-ui/app/elements/diff/gr-diff-comment-thread-group/gr-diff-comment-thread-group.html
+++ b/polygerrit-ui/app/elements/diff/gr-diff-comment-thread-group/gr-diff-comment-thread-group.html
@@ -32,6 +32,7 @@ limitations under the License.
         location-range="[[thread.locationRange]]"
         patch-num="[[patchNum]]"
         path="[[path]]"
+        comment-side="[[thread.commentSide]]"
         side="[[side]]"
         project-config="[[projectConfig]]"></gr-diff-comment-thread>
     </template>
