--- a/polygerrit-ui/app/elements/diff/gr-diff-comment-thread/gr-diff-comment-thread.html
+++ b/polygerrit-ui/app/elements/diff/gr-diff-comment-thread/gr-diff-comment-thread.html
@@ -43,6 +43,7 @@ limitations under the License.
             patch-num="[[patchNum]]"
             draft="[[comment.__draft]]"
             show-actions="[[_showActions]]"
+            comment-side="[[comment.__commentSide]]"
             project-config="[[projectConfig]]"
             on-comment-discard="_handleCommentDiscard"
             on-create-ack-comment="_handleCommentAck"
