--- a/polygerrit-ui/app/elements/diff/gr-diff-comment-thread/gr-diff-comment-thread_test.html
+++ b/polygerrit-ui/app/elements/diff/gr-diff-comment-thread/gr-diff-comment-thread_test.html
@@ -544,5 +544,11 @@ limitations under the License.
       assert.equal(element._computeHostClass(true), 'unresolved');
       assert.equal(element._computeHostClass(false), '');
     });
+
+    test('_newDraft', function() {
+      element.commentSide = 'left';
+      var draft = element._newDraft();
+      assert.equal(draft.__commentSide, 'left');
+    });
   });
 </script>
